<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_scrollFlags="exitUntilCollapsed"
    tools:context="co.aurasphere.scanner.MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/empty_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/empty_list_message"
        android:textAlignment="center" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_bluetooth_white_24dp" />

    <co.aurasphere.scanner.view.RecyclerViewProgressEmptySupport
        android:id="@+id/list"
        tools:visibility="gone"
        android:name="co.aurasphere.bluepair.DeviceFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="co.aurasphere.scanner.DeviceFragment"
        tools:listitem="@layout/list_device_item" />

    <RelativeLayout
        android:id="@+id/layout_connected"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:layout_gravity="center">

    <Button
        android:id="@+id/btn_send"
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content"/>

       <EditText
           android:id="@+id/et_send"
           android:layout_marginTop="20dp"
           android:layout_width="wrap_content"
           android:minWidth="30dp"
           android:layout_alignStart="@id/btn_send"
           android:layout_height="wrap_content"
           android:layout_below="@id/btn_send"
           />

        <Button
            android:id="@+id/btn_receive"
            android:text="@string/receive"
            android:layout_marginRight="30dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_receive"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:minWidth="30dp"
            android:layout_alignStart="@id/btn_receive"
            android:layout_alignEnd="@id/btn_receive"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_receive"
            />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_centerHorizontal="true"
            android:text="Cancel Connection"
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>